<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context="ui.MyInstallationFragment">

    <TextView
        android:id="@+id/tvFirstDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/llAutoconsumo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstDescription">

        <TextView
            android:id="@+id/tvSecondDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/autoconsumo" />

        <TextView
            android:id="@+id/tvNumericValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:hint="@string/numeric_value" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivGraph"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:contentDescription="@string/energy_graph"
        android:src="@drawable/grafico1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llAutoconsumo" />
</androidx.constraintlayout.widget.ConstraintLayout>